@@ -1,8 +1,8 @@
 # Generated by mksrcinfo v8
-# Sun Feb 19 22:57:01 UTC 2017
+# Mon Sep 11 13:21:50 UTC 2017
 pkgbase = micropython-git
 	pkgdesc = A Python 3 implementation for microcontrollers and constrained environments (Unix version).
-	pkgver = 1.8.7.292.g3d739eb39
+	pkgver = 1.9.2.83.g6e06512e0
 	pkgrel = 1
 	epoch = 1
 	url = http://micropython.org/
@@ -16,7 +16,7 @@ pkgbase = micropython-git
 	optdepends = micropython-lib: for MicroPython standard library
 	provides = micropython
 	conflicts = micropython
-	source = git://github.com/micropython/micropython.git
+	source = micropython::git://github.com/micropython/micropython.git
 	md5sums = SKIP
 
 pkgname = micropython-git
