@@ -2,8 +2,9 @@
 # Contributor: wenLiangcan <boxeed at gmail dot com>
 # Contributor: Kyle Keen <keenerd@gmail.com>
 
-pkgname=micropython-git
-pkgver=1.8.7.292.g3d739eb39
+_pkgname="micropython"
+pkgname="${_pkgname}-git"
+pkgver=1.9.2.83.g6e06512e0
 pkgrel=1
 epoch=1
 pkgdesc="A Python 3 implementation for microcontrollers and constrained environments (Unix version)."
@@ -12,33 +13,33 @@ url="http://micropython.org/"
 license=('MIT')
 depends=('libffi')
 makedepends=('git' 'python')
-provides=('micropython')
-conflicts=('micropython')
+provides=("${_pkgname}")
+conflicts=("${_pkgname}")
 optdepends=('micropython-lib: for MicroPython standard library')
-source=('git://github.com/micropython/micropython.git')
+source=("${_pkgname}::git://github.com/micropython/${_pkgname}.git")
 changelog='ChangeLog'
 md5sums=('SKIP')
 
 
 pkgver() {
-  cd "${srcdir}/micropython"
+  cd "${srcdir}/${_pkgname}"
   PYTHONPATH='py' python -c \
     'import makeversionhdr; v=makeversionhdr.get_version_info_from_git()[0]; print(v.lstrip("v").replace("-", "."))'
 }
 
 prepare() {
-  cd "${srcdir}/micropython"
+  cd "${srcdir}/${_pkgname}"
   git submodule update --init
 }
 
 build() {
-  cd "${srcdir}/micropython/unix"
+  cd "${srcdir}/${_pkgname}/ports/unix"
   make CWARN="-Wall -Werror -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=unused-const-variable" axtls
   make
 }
 
 package() {
-  cd "${srcdir}/micropython/unix"
+  cd "${srcdir}/${_pkgname}/ports/unix"
   make PREFIX="$pkgdir/usr" install
-  install -Dm644 "../LICENSE" "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
+  install -Dm644 "${srcdir}/${_pkgname}/LICENSE" "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
 }
