@@ -1,4 +1,8 @@
 2017-01-27 Christopher Arndt <aur -at- chrisarndt -dot- de>
+	* 1:1.9.2.83.g6e06512e0-1
+	Adapted PKGBUILD to new source repository layout
+
+2017-01-27 Christopher Arndt <aur -at- chrisarndt -dot- de>
 
 	* 1:1.8.7.108.g0390bc97e-2 :
 	Fixed date of previous package version in this ChangeLog.
